src/manifests/release/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pollsensei-web-app
  namespace: release
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pollsensei-web-app
  template:
    metadata:
      labels:
        app: pollsensei-web-app
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name:  pollsensei-web-app
          image: oaksdevacr.azurecr.io/pollsensei-web:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
