src/manifests/release/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pollsensei-web-service
  namespace: release-pollsensei-web
spec:
  type: ClusterIP
  selector:
    app: pollsensei-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
