src/manifests/release/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pollsensei-web-ingress-release
  namespace: release-pollsensei-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - release.pollsensei.ai
      secretName: release-pollsensei-web-tls
  rules:
    - host: release.pollsensei.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pollsensei-web-service
                port:
                  number: 3000
